historia.css
.titleWrapper-historia {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: hsl(175, 50%, 24%);
  padding-top: 5px;
  padding-bottom: 30px;
}
:root {
  --primary-color: hsl(175, 50%, 24%);
  /* --background-color: hsl(175, 50%, 24%); */
  --font: sans-serif;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--font);

  justify-content: center;
}

.timelineHistory {
  display: flex;
  flex-direction: column;
  background: var(--primary-color);
  margin: 20px auto;
  padding: 20px;
  align-items: center;
  margin: 0;
}

.historyWrapper {
  display: flex;
  align-items: center;
  flex-direction: column;
  border-left: 2px solid #333;
  max-width: 642px;
}

.card {
  position: relative;
  margin: 0 0 20px 20px;
  padding: 10px;
  background: rgb(254, 250, 250);
  color: rgb(133, 79, 79);
  border-radius: 8px;
  max-width: 600px;
}

.info {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.title {
  color: rgb(33, 21, 21);
  position: relative;
  font-size: 25px;
}

.title::before {
  content: '';
  position: absolute;
  width: 10px;
  height: 10px;
  background: white;
  border-radius: 1000px;
  left: -39px;
  border: 3px solid rgb(2, 2, 8);
}

.card p {
  color: rgb(11, 11, 22);
}

